--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13,<3.14"
 dependencies = [
+    "markitdown[all] (>=0.1.1,<0.2.0)"
 ]
 
 [tool.poetry]
